# gtesting-testing

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/core/: animal.h
src/: main.cc
src/core/: animal.cc
src/utils/: mathutils.cc
tests/: testing.cc
utils/: mathutils.cc  mathutils.h
